--- a/assets/templates/assets/partials/modal/multi-order.html
+++ b/assets/templates/assets/partials/modal/multi-order.html
@@ -3,7 +3,7 @@
 {% load bootstrap %}
 
 <!-- Approve Request Modal -->
-<div class="modal fade" id="assets-single-request" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="assets-multi-request" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -20,23 +20,20 @@
                     <form method="post">
                         <div class="d-flex align-items-center gap-2">
                             {% csrf_token %}
-                            <fieldset class="assets-single-request-form flex-grow-1">
-                                {{ forms.single_request|bootstrap }}
+                            <fieldset class="assets-multi-request-form flex-grow-1">
+                                {{ forms.multi_request|bootstrap }}
                             </fieldset>
-                            <button id="modal-button-buy-single-request" type="button" class="btn btn-primary mt-4">
-                                {% trans "All" %}
-                            </button>
                         </div>
                     </form>
-                    {% include 'assets/partials/form/required-field.html' %}
+                    {% include 'assets/partials/form/minimum-field.html' %}
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="modal-button-cancel-single-request" type="button" class="btn btn-danger" data-bs-dismiss="modal">
+                <button id="modal-button-cancel-multi-request" type="button" class="btn btn-danger" data-bs-dismiss="modal">
                     <i class="fa-solid fa-hand"></i> {% trans "Cancel" %}
                 </button>
 
-                <button id="modal-button-confirm-single-request" type="button" class="btn btn-success">
+                <button id="modal-button-confirm-multi-request" type="button" class="btn btn-success">
                     <i class="fa-solid fa-check"></i> {% trans "Confirm" %}
                 </button>
             </div>
