--- a/assets/templates/assets/partials/table/assets.html
+++ b/assets/templates/assets/partials/table/assets.html
@@ -33,11 +33,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="0">
-                        <button type="button" class="btn btn-primary text-nowrap" data-bs-toggle="modal" data-bs-target="#buyModal" data-action="all">
-                            {% translate "Specific Buy" %}
-                        </button>
-                    </td>
+                    <th colspan="6"></th>
                 </tr>
             </tfoot>
         </table>
