--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -27,8 +27,9 @@
     {% assets_static 'js/modal-system.js' %}
 
     {% include 'assets/partials/modal/single-order.html' %}
-
+    {% include 'assets/partials/modal/multi-order.html' %}
     {% include 'assets/partials/modal/confirm.html' %}
+    {% include 'ledger/partials/modal/modal.html' with name="ViewOrder" %}
 
     {% include 'bundles/datatables-js-bs5.html' %}
     {% include "bundles/moment-js.html" with locale=True %}
@@ -41,6 +42,118 @@
 
     {% assets_static 'js/modals/confirm-request.js' %}
     {% assets_static 'js/modals/single-request.js' %}
+
+    <script>
+        $(document).ready(() => {
+            /* global tableAssets, loadRequestStatistics */
+            const modalRequestOrder = $('#assets-multi-request');
+            const modalErrorMessage = modalRequestOrder.find('#modal-error-message');
+            const modalErrorRequiredText = modalErrorMessage.text();
+            const modalForm = modalRequestOrder.find('form');
+            // Approve Request Modal
+            modalRequestOrder.on('show.bs.modal', (event) => {
+                const button = $(event.relatedTarget);
+
+                // Form Data
+                const url = button.data('action');
+
+                const csrfMiddlewareToken = modalForm.find('input[name="csrfmiddlewaretoken"]').val();
+
+                // Extract the title from the button
+                const modalTitle = button.data('title');
+
+                // Set the title in the modal
+                const modalTitleDiv = modalRequestOrder.find('#modal-title');
+                modalTitleDiv.html(modalTitle);
+
+                // Extract the text from the button
+                const modalText = button.data('text');
+                const modalDiv = modalRequestOrder.find('#modal-request-text');
+                modalDiv.html(modalText);
+
+                // Limit the input to max quantity
+                modalForm.find('input[name^="amount_"]').each(function () {
+                    const MultiOrderInput = $(this);
+                    const maxQuantity = parseInt(MultiOrderInput.data('quantity'), 10); // Maximalwert des Feldes
+                    // Automatische Korrektur des Eingabewerts, falls er den Maximalwert überschreitet
+                    MultiOrderInput.on('input', () => {
+                        const currentValue = parseInt(MultiOrderInput.val(), 10);
+                        if (currentValue > maxQuantity) {
+                            MultiOrderInput.val(maxQuantity); // Auf Maximalwert setzen
+                        }
+                    });
+                });
+
+
+                $('#modal-button-confirm-multi-request').on('click', () => {
+                    const items = {};
+
+                    modalForm.find('input[name^="amount_"]').each(function () {
+                        const MultiOrderInput = $(this);
+                        const fieldName = MultiOrderInput.data('item-id'); // Name des Feldes (z. B. "amount_123")
+                        const value = parseInt(MultiOrderInput.val(), 10); // Wert des Feldes
+                        if (!isNaN(value) && value > 0) {
+                            items[fieldName] = value; // Nur Felder mit gültigen Werten hinzufügen
+                        }
+                    });
+
+                    if (Object.keys(items).length === 0) {
+                        modalErrorMessage.text(modalErrorRequiredText).removeClass('d-none'); // Show the error message
+                        // Add shake class to the error field
+                        modalErrorMessage.addClass('ts-shake');
+
+                        // Remove the shake class after 3 seconds
+                        setTimeout(() => {
+                            modalErrorMessage.removeClass('ts-shake');
+                        }, 2000);
+                    } else {
+                        const posting = $.post(
+                            url,
+                            {
+                                csrfmiddlewaretoken: csrfMiddlewareToken,
+                                items: JSON.stringify(items),
+                            }
+                        );
+
+                        posting.done(() => {
+                            modalRequestOrder.modal('hide');
+                            loadRequestStatistics(); // Reload the request statistics
+                            const tableAssets = $('#assets').DataTable();
+                            const tableMyRequest = $('#my-requests').DataTable();
+                            const tableRequest = $('#requests').DataTable();
+                            tableAssets.ajax.reload(); // Reload the assets table
+                            tableMyRequest.ajax.reload(); // Reload the my requests table
+                            tableRequest.ajax.reload(); // Reload the requests table
+                        }).fail((xhr, _, __) => {
+                            const response = JSON.parse(xhr.responseText);
+                            modalErrorMessage.text(response.message).removeClass('d-none'); // Show the error message
+                            // Add shake class to the error field
+                            modalErrorMessage.addClass('ts-shake');
+
+                            // Remove the shake class after 3 seconds
+                            setTimeout(() => {
+                                modalErrorMessage.removeClass('ts-shake');
+                            }, 2000);
+                        });
+                    }
+                });
+            }).on('hide.bs.modal', () => {
+                modalRequestOrder.find('.alert-danger').remove();
+                modalForm.find('input[name^="amount_"]').each(function () {
+                    const MultiOrderInput = $(this);
+                    MultiOrderInput.val(''); // Reset the input field
+                });
+                $('#modal-button-confirm-multi-request').unbind('click');
+                modalErrorMessage.addClass('d-none');
+                modalErrorMessage.val('');
+            });
+        });
+
+    </script>
+
+    <script type="application/javascript">
+        setupModal('#modalViewOrderContainer', 'ajax-order', '#modalViewOrderContent', '#modalViewOrderLoader');
+    </script>
 
     <script type="application/javascript">
         // Bootstrap Nav Active System
