--- a/assets/templates/assets/bundles/assets-bundles.html
+++ b/assets/templates/assets/bundles/assets-bundles.html
@@ -3,110 +3,4 @@
 {% load static %}
 {% load assets %}
 
-{% comment %}
-<script type="application/javascript" src="{% static 'assets/js/assets.js' %}"></script>
-{% endcomment %}
-
-<script>
-/* global assetsSettings */
-
-document.addEventListener('DOMContentLoaded', function () {
-    const AssetsTableVar = $('#assets');
-
-    let LocationID = null;
-    let LocationFLAG = null;
-
-    const tableAssets = AssetsTableVar.DataTable({
-        ajax: {
-            url: assetsSettings.assetsUrl,
-            type: 'GET',
-            dataSrc: function(data) {
-                LocationID = data.location_id;
-                LocationFLAG = data.location_flag;
-                return data.assets;
-            }
-        },
-        columns: [
-            {
-                data: 'item_id',
-                render: function(data, type, row) {
-                    return '<img class="card-img-zoom" src="https://imageserver.eveonline.com/types/' + data + '/icon/?size=64" height="64" width="64"/>';
-                }
-            },
-            {
-                data: 'name',
-                render: function(data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'quantity',
-                render: function (data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'location',
-                render: function (data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'price',
-                render: function (data, type, row) {
-                    // Rückgabe des formatierten Strings mit Farbe und Einheit
-                    if (type === 'display') {
-                        if (!isNaN(data) && typeof data === 'number') {
-                            return data.toLocaleString() + ' ISK';
-                        }
-                    }
-                    return data;
-                }
-            },
-            {
-                data: null,
-                render: function(data, type, row) {
-                    return `
-                        <button type="button"
-                            class="btn btn-primary"
-                            data-bs-toggle="modal"
-                            data-bs-target="#assets-single-request"
-                            data-action="{% url 'assets:create_order' %}" aria-label="Request Order"
-                            data-asset-pk="${row.asset_pk}"
-                            data-item-quantity="${row.quantity}"
-                            data-title="${row.name}"
-                        >
-                            ${translation.buy}
-                        </button>
-                    `
-                }
-            }
-        ],
-        order: [[4, 'desc']],
-        pageLength: 25,
-        autoWidth: false,
-        columnDefs: [
-            { 'sortable': false, 'targets': [0, 5] },
-        ],
-        footerCallback: function (row, data, start, end, display) {
-            const api = this.api();
-            const footer = $(api.table().footer());
-
-            footer.html(`
-                <button type="button"
-                    class="btn btn-primary text-nowrap" data-bs-toggle="modal"
-                    data-bs-target="#assets-multi-request"
-                    data-title="${translation.multiBuy}"
-                    data-location-id="${LocationID}"
-                    data-location-flag="${LocationFLAG}"
-                    data-action="{% url 'assets:create_order' %}"
-                    aria-label="Request Order"
-                >
-                    ${translations.multiBuy}
-                </button>
-            `);
-        }
-    });
-
-})
-</script>
+{% assets_static 'js/assets.js' %}
