--- a/assets/templates/assets/bundles/requests-bundles.html
+++ b/assets/templates/assets/bundles/requests-bundles.html
@@ -1,117 +1,6 @@
 {% load i18n %}
 {% load humanize %}
 {% load static %}
+{% load assets %}
 
-{% comment %}
-<script type="application/javascript" src="{% static 'assets/js/requests.js' %}"></script>
-{% endcomment %}
-
-<script>
-/* global assetsSettings, moment, bootstrap */
-var manage_requests = assetsSettings.manage_requests;
-
-var csrfToken = assetsSettings.csrfToken;
-var urlRequests, urlMyRequests;
-
-$(document).ready(() => {
-    urlRequests = '/assets/api/requests/';
-    urlMyRequests = '/assets/api/requests/myrequests/';
-    // Initialisieren Sie die DataTable für assets
-    const RequestTable = initializeRequests('#requests', urlRequests);
-    const MyRequestTable = initializeRequests('#my-requests', urlMyRequests);
-});
-
-function initializeRequests(tableId, url) {
-    return $(tableId).DataTable({
-        'ajax': {
-            'url': url,
-            'dataSrc': function(json) {
-                // Store the data in a global variable
-                return json;
-            }
-        },
-        'columns': [
-            {
-                data: 'id',
-                render: function(data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'order',
-                render: function(data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'requestor',
-                render: function(data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'status',
-                render: function(data, type, row) {
-                    return data;
-                }
-            },
-            {
-                data: 'created',
-                render: function(data, type, row) {
-                    if (type === 'display') {
-                        return moment(data).format('L LT');
-                    }
-                    return data;
-                }
-            },
-            {
-                data: 'actions',
-                className: 'text-end',
-                render: function(data, type, row) {
-                    return data
-                }
-            },
-        ],
-        order: [[3, 'desc']],
-        pageLength: 25,
-        autoWidth: false,
-        columnDefs: [
-            { 'sortable': false, 'targets': [1, 5] },
-        ],
-    });
-}
-</script>
-
-<script>
-/* global assetsSettings */
-
-$(document).ready(() => {
-    window.loadRequestStatistics = function () {
-        $.ajax({
-            url: assetsSettings.statisticsUrl, // URL für die Statistikdaten
-            type: 'GET',
-            dataType: 'json',
-            success: function (data) {
-                const requestCountElement = document.getElementById('request-count');
-                const myRequestCountElement = document.getElementById('my-request-count');
-
-                if (requestCountElement) {
-                    const requestCount = data.requestCount || 0;
-                    requestCountElement.textContent = requestCount;
-                    requestCountElement.classList.toggle('d-none', requestCount === 0);
-                }
-
-                if (myRequestCountElement) {
-                    const myRequestCount = data.myRequestCount || 0;
-                    myRequestCountElement.textContent = myRequestCount;
-                    myRequestCountElement.classList.toggle('d-none', myRequestCount === 0);
-                }
-            },
-            error: function (xhr, status, error) {
-                console.error('Fehler beim Abrufen der Statistikdaten:', error);
-            }
-        });
-    };
-    loadRequestStatistics(); // Initialer Aufruf der Funktion
-})
-</script>
+{% assets_static 'js/requests.js' %}
