--- a/assets/templates/assets/partials/modal/view-order.html
+++ b/assets/templates/assets/partials/modal/view-order.html
@@ -14,7 +14,7 @@
         <header class="bg-primary rounded-top px-2 py-1">
             <h3 class="me-3">{% trans "Order List" %}</h3>
         </header>
-        <table class="table table-dark table-striped table-hover w-100 requests" id="order">
+        <table class="card-body table table-hover table-striped w-100 requests" id="order">
             <thead>
                 <tr>
                     <th class="col-icon"></th>
@@ -23,8 +23,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
                     {% for order in orders %}
+                    <tr>
                         <td class="col-icon">
                             <img src="{{ order.item_id|type_icon_url:32 }}">
                         </td>
@@ -34,8 +34,8 @@
                         <td class="col-amount">
                             {{ order.quantity|intcomma }}
                         </td>
+                    </tr>
                     {% endfor %}
-                </tr>
             </tbody>
         </table>
     </div>
