--- a/assets/templates/assets/partials/table/assets.html
+++ b/assets/templates/assets/partials/table/assets.html
@@ -7,6 +7,9 @@
         <div class="card-body">
             Hier findest du alle Assets deiner Corporation die zum Verkauf stehen solltest du etwas davon kaufen wollen, wende dich bitte an den Direktoren bzw. Industrie Offizier.
         </div>
+        <div class="card-body text-danger">
+            Bitte benutzt die Multi Buy Funktion wenn ihr mehrere Assets kaufen wollt.
+        </div>
     </div>
     <br><br>
     <div class="table-responsive">
