--- a/assets/templates/assets/partials/table/assets.html
+++ b/assets/templates/assets/partials/table/assets.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-{% load humanize %}
 
 <div role="tabpanel" class="tab-pane fade" id="tab-assets">
     <div class="card">
@@ -13,7 +12,7 @@
     </div>
     <br><br>
     <div class="table-responsive">
-        <table class="table table-striped table-hover assets" id="assets" style="width: 100%;">
+        <table class="table table-striped table-hover order" id="assets" style="width: 100%;">
             <thead>
                 <tr>
                     <th class="col-itemid" style="width: 5%;"></th>
