--- a/assets/templates/assets/base.html
+++ b/assets/templates/assets/base.html
@@ -5,18 +5,20 @@
 {% block extra_css %}
 {% endblock extra_css %}
 
-{% block page_title %} {% translate "Assets System" %} {% endblock %}
+{% block page_title %}
+    {% block page_template_title %}{% endblock page_template_title %} ⋗ {% translate "Assets System" %}
+{% endblock %}
 
 {% block header_nav_brand %}
-    {% translate "Assets System" %}
+    <a class="nav-link text-white link-light link-underline link-underline-opacity-0" href="{% url 'assets:index' %}">Assets</a>
 {% endblock header_nav_brand %}
 
 {% block header_nav_collapse_left %}
-    {% include 'assets/partials/navigation.html' %}
+    {% include 'assets/partials/menu/navigation.html' %}
 {% endblock %}
 
 {% block header_nav_collapse_right %}
-    {% include 'assets/partials/administration.html' %}
+    {% include 'assets/partials/menu/administration.html' %}
 {% endblock %}
 
 {% block content %}
