--- a/assets/templates/assets/partials/menu/assets/navigation.html
+++ b/assets/templates/assets/partials/menu/assets/navigation.html
@@ -8,9 +8,9 @@
 
     <div class="d-flex flex-row" id="aa-assets-tabs" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link" href="#tab-assets" data-bs-toggle="tab" data-bs-target="#tab-assets" >
+            <a class="nav-link active" href="#tab-assets" data-bs-toggle="tab" aria-current="page" aria-selected="true" data-bs-target="#tab-assets" >
                 {% translate "Assets" %}
-                <span class="badge bg-secondary d-none" id="assets-count"></span>
+                <span class="badge bg-secondary" id="assets-count"></span>
             </a>
         </li>
 
