--- a/assets/templates/assets/partials/table/assets.html
+++ b/assets/templates/assets/partials/table/assets.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div role="tabpanel" class="tab-pane fade" id="tab-assets">
+<div role="tabpanel" class="tab-pane" id="tab-assets">
     <div class="card">
         <div class="card-header bg-primary rounded-top px-2"><h3>Information Blatt</h3></div>
         <div class="card-body">
