--- a/assets/templates/assets/partials/table/assets.html
+++ b/assets/templates/assets/partials/table/assets.html
@@ -15,12 +15,13 @@
         <table class="table table-striped table-hover order" id="assets" style="width: 100%;">
             <thead>
                 <tr>
-                    <th class="col-itemid" style="width: 5%;"></th>
-                    <th class="col-name" style="width: 20%;">Name</th>
-                    <th class="col-quantity" style="width: 5%;">{% translate "Quantity" %}</th>
-                    <th class="col-location" style="width: 20%;">{% translate "Location" %}</th>
-                    <th class="col-price" style="width: 20%;">{% translate "Price" %}</th>
-                    <th class="col-action" style="width: 20%;">{% translate "Action" %}</th>
+                    <th class="col-itemid"></th>
+                    <th class="col-name">Name</th>
+                    <th class="col-quantity">{% translate "Quantity" %}</th>
+                    <th class="col-location">{% translate "Location" %}</th>
+                    <th class="col-location-flag">{% translate "Location Flag" %}</th>
+                    <th class="col-price">{% translate "Price" %}</th>
+                    <th class="col-action">{% translate "Action" %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,13 +30,14 @@
                     <td class="col-name"></td>
                     <td class="col-quantity"></td>
                     <td class="col-location"></td>
+                    <td class="col-location-flag"></td>
                     <td class="col-price"></td>
                     <td class="col-action"></td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <th colspan="6"></th>
+                    <th colspan="7"></th>
                 </tr>
             </tfoot>
         </table>
